envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
              - name: web_service
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                  route: { host_rewrite: localhost, cluster: web_cluster, timeout: 60s}
          http_filters:
          - name: envoy.router
          config: {}
  clusters:
  - name: web_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    # http2_protocol_options: {}
    hosts: [{ socket_address: { address: web-server, port_value: 8000 }}]
